# jormungandr

./: .bazelrc  .clang-format  .git-blame-ignore-revs  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  Makefile  NOTES.md  README.md  TODO.md  WORKSPACE  jmgc.cpp
bazel/: jmgc.bzl  quickfix.BUILD
examples/: BUILD  cmdline_demo.cpp
experimental/cbe/: BUILD  README.md  cbe.cpp  cbe.h  test_cbe.cpp
experimental/flatbuffers/: README.md  flatbuf_monsters_demo.cpp  monster.fbs
experimental/reactor/: BUILD  README.md  control_blocks.h  dns_lookup_c-ares.cpp  dns_lookup_c-ares.h  fiber.cpp  fiber.h  google_example_passing_capturing_lambda_via_eventfd.cpp  google_fiber_fcn_tramp_demo.cpp  ip_endpoint.cpp  lookup_address.cpp  reactor.cpp  reactor.h  reactor_based_client.cpp  reactor_based_client.h  reactor_based_server.cpp  reactor_based_server.h  simple_tcp_service.cpp  test_control_blocks.cpp  test_ip_endpoint.cpp  test_reactor.cpp  test_ucontext.cpp  test_uring.cpp  thread_pool.h  uring.cpp  uring.h  uring_defs.h  util.h
experimental/reactor/misc/: echo_client.cpp  echo_server.cpp  lookup_address.cpp  non_reactor_echo_server.cpp  reactor_echo_client.cpp  simple_tcp_service.cpp  simple_tcp_service.h
githooks/: install-pre-commit-hook.sh  pre-commit
include/jmg/: MODULE.bazel  array_proxy.h  bitwise_scoped_enums.h  cmdline.h  conversion.h  field.h  file_util.h  future.h  ip_endpoint.h  meta.h  object.h  preprocessor.h  random.h  safe_types.h  server.h  system.h  types.h  union.h  util.h
include/jmg/cbe/: cbe.h
include/jmg/flatbuffers/: flatbuffers.h
include/jmg/native/: native.h
include/jmg/protobuf/: protobuf.h
include/jmg/ptree/: ptree.h
include/jmg/quickfix/: quickfix.h
include/jmg/tuple_object/: tuple_object.h
include/jmg/yaml/: yaml.h
jmgc/: BUILD  BUILD.bazel  cbe_spec.cpp  cbe_spec.h  jmg_spec.cpp  jmg_spec.h  jmgc.cpp  jmgc_parser.cpp  jmgc_parser.h  jmgc_spec.cpp  jmgc_spec.h  proto_spec.cpp  proto_spec.h  protoc_spec.cpp  protoc_spec.h  quickfix_spec.cpp  quickfix_spec.h  sbe_spec.cpp  sbe_spec.h  spec_util.cpp  spec_util.h  test_jmgc.yaml  test_jmgc_any.cpp  test_jmgc_parser.cpp  test_jmgc_yaml.cpp  yaml_spec.cpp  yaml_spec.h
patches/: bshoshany_thread_pool_bazel.patch  ctre_bazel.patch  developerpaul123_thread_pool_bazel.patch  more_concepts.patch  quickfix.add_build_file.patch  quickfix.module.bazel.patch
src/: cbe.cpp  ip_endpoint.cpp  meta.cpp  server.cpp  server_main.cpp  system.cpp  util.cpp
test/: BUILD  BUILD.bazel  test.proto  test_array_proxy.cpp  test_cbe.cpp  test_cmdline.cpp  test_conversion.cpp  test_conversion_compile_fails.cpp  test_field.cpp  test_file_util.cpp  test_future.cpp  test_ip_endpoint.cpp  test_jmg_example.cpp  test_meta.cpp  test_native.cpp  test_object.cpp  test_protobuf.cpp  test_ptree.cpp  test_quickfix.cpp  test_random.cpp  test_safe_types.cpp  test_server_main.cpp  test_tuple_object.cpp  test_types.cpp  test_union.cpp  test_util.cpp  test_yaml.cpp
test/data/: example.yaml  experimental.yaml  test.proto  test_proto.yaml
tools/: format_all.sh
