
# TODO get boost build working under bzlmod
# load("@com_github_nelhage_rules_boost//:boost/boost.bzl", "boost_deps")
# boost_deps()

cc_library(
    name = "jmg",
    visibility = ["//visibility:public"],
    hdrs = [
        "include/jmg/array_proxy.h",
        "include/jmg/cmdline.h",
        "include/jmg/conversion.h",
        "include/jmg/field.h",
        "include/jmg/file_util.h",
        "include/jmg/meta.h",
        "include/jmg/object.h",
        "include/jmg/preprocessor.h",
        "include/jmg/ptree/ptree.h",
        "include/jmg/quickfix/quickfix.h",
        "include/jmg/safe_types.h",
        "include/jmg/types.h",
        "include/jmg/union.h",
        "include/jmg/util.h",
        "include/jmg/yaml/yaml.h",
    ],
    includes = ["include"],
    deps = [
        "@com_google_abseil//absl/container:btree",
        "@com_google_abseil//absl/container:flat_hash_map",
        "@com_google_abseil//absl/container:flat_hash_set",
        "@ericniebler_meta//:meta",
        "@doom_strong_type//:strong_type",
        "@yaml-cpp//:yaml-cpp",
        "@boost//:property_tree",
    ],
)

cc_binary(
    name = "jmgc",
    visibility = ["//visibility:public"],
    srcs = ["jmgc.cpp"],
    deps = [
        ":jmg",
    ],
)
