
module(
    name = 'jormungandr',
    repo_name = 'coding_heresy_jormungandr',
    version = '0.1.0',
)

########################################
# boost library
########################################

bazel_dep(
    name = 'rules_boost',
    repo_name = 'com_github_nelhage_rules_boost'
)

archive_override(
    module_name = 'rules_boost',
    integrity = 'sha256-VPUdhabBIpScZa20o7C9qCGOAxSOixkD5EWvZxciCZA=',
    strip_prefix = 'rules_boost-8fa193c4e21daaa2d46ff6b9c2b5a2de70b6caa1',
    urls = 'https://github.com/nelhage/rules_boost/archive/8fa193c4e21daaa2d46ff6b9c2b5a2de70b6caa1.tar.gz',
)

non_module_boost_repositories = use_extension(
    '@com_github_nelhage_rules_boost//:boost/repositories.bzl',
    'non_module_dependencies'
)

use_repo(
    non_module_boost_repositories,
    'boost',
)

########################################
# google abseil
########################################

bazel_dep(
    name = 'abseil-cpp',
    version = '20250512.1',
    repo_name = 'com_google_abseil',
)

########################################
# google test
########################################

bazel_dep(
    name = 'googletest',
    version = '1.17.0',
    repo_name = 'com_google_googletest',
    dev_dependency = True,
)

########################################
# liburing
########################################

bazel_dep(
    name = 'liburing',
    version = '2.5',
)

########################################
# yaml library
########################################

bazel_dep(
    name = 'yaml-cpp',
    version = '0.8.0',
)

########################################
# Eric Niebler meta-programming library
########################################

bazel_dep(
    name = 'ericniebler_meta',
    version = '1.0.0',
)

# TODO issue pull request to https://github.com/ericniebler/meta and
# update here if it is accepted
archive_override(
    module_name = 'ericniebler_meta',
    integrity = 'sha256-KIf+Iv4VFewjAybyqR0XlDDLSUCLWEVXbcZeFLWmOaQ=',
    strip_prefix = 'meta-1.0.0',
    urls = ['https://github.com/coding-heresy/meta/archive/refs/tags/1.0.0.tar.gz'],
)

########################################
# strong type aliases from Doom
########################################

bazel_dep(
    name = 'doom_strong_type',
    version = '1.1.0',
)

# TODO issue pull request to https://github.com/doom/strong_type and
# update here if it is accepted
archive_override(
    module_name = 'doom_strong_type',
    integrity = 'sha256-CyRxFGE9/t9PCBw2T7pddmOwy6z6QaYq+F6QH1rfAeo=',
    strip_prefix = 'strong_type-1.1.0',
    urls = ['https://github.com/coding-heresy/strong_type/archive/refs/tags/1.1.0.tar.gz'],
)

# TODO(bd) restore this when rules_build_error works correctly

# ########################################
# # rules to enforce build failures
# ########################################

# bazel_dep(
#     name = 'rules_build_error',
#     version = '0.8.4',
# )
