
module(
    name = "jormungandr",
    repo_name = "coding_heresy_jormungandr",
    version = "0.1.0",
)

########################################
# google abseil
########################################

bazel_dep(
    name = "abseil-cpp",
    version = "20250814.1",
    repo_name = "com_google_abseil",
)

########################################
# boost library
########################################

# TODO(bd) figure out how to make boost.asio work with shadow stacks
# or try a different thread pool implementation
# bazel_dep(
#     name = "boost.asio",
#     version = "1.87.0",
# )

bazel_dep(
    name = "boost.date_time",
    version = "1.87.0",
)

bazel_dep(
    name = "boost.property_tree",
    version = "1.87.0",
)

########################################
# thread pool libraries
########################################

bazel_dep(
    name = "bs_thread-pool",
    # AKA bshoshany_thread-pool
    version = "5.1.0",
)

# TODO(bd) issue pull request to
# https://github.com/bshoshany/thread-pool and update here if it is
# accepted
archive_override(
    module_name = "bs_thread-pool",
    integrity = "sha256-VDePucvq7nKZbT+HYUacQ7t90tSwf67G0ppoJ3vZGlE=",
    strip_prefix = "thread-pool-5.1.0",
    urls = ["https://github.com/bshoshany/thread-pool/archive/refs/tags/v5.1.0.tar.gz"],
    patches = ["//patches:bshoshany_thread_pool_bazel.patch"],
    patch_strip = 1,
)

bazel_dep(
    name = "dp_thread-pool",
    # AKA developerpaul123_thread-pool
    version = "0.7.0",
)
archive_override(
    module_name = "dp_thread-pool",
    #integrity = "sha256-VDePucvq7nKZbT+HYUacQ7t90tSwf67G0ppoJ3vZGlE=",
    strip_prefix = "thread-pool-0.7.0",
    urls = ["https://github.com/DeveloperPaul123/thread-pool/archive/refs/tags/0.7.0.tar.gz"],
    patches = ["//patches:developerpaul123_thread_pool_bazel.patch"],
    patch_strip = 1,
)

########################################
# compile time regular expressions
########################################

bazel_dep(
    name = "ctre",
    version = "3.10.0",
)

# TODO(bd) issue pull request to
# https://github.com/hanickadot/compile-time-regular-expressions and
# update here if it is accepted
archive_override(
    module_name = "ctre",
    integrity = "sha256-sX5smmzAzqZRMvYqbGmc7+2VJyEGNWnWM56zykcQReY=",
    strip_prefix = "compile-time-regular-expressions-3.10.0",
    urls = ["https://github.com/hanickadot/compile-time-regular-expressions/archive/refs/tags/v3.10.0.tar.gz"],
    patches = ["//patches:ctre_bazel.patch"],
    patch_strip = 1,
)

########################################
# google test
########################################

bazel_dep(
    name = "googletest",
    version = "1.17.0",
    repo_name = "com_google_googletest",
    dev_dependency = True,
)

########################################
# liburing
########################################

bazel_dep(
    name = "liburing",
    version = "2.5",
)

########################################
# meta-programming library from Eric Niebler
########################################

bazel_dep(
    name = "ericniebler_meta",
    version = "1.0.0",
)

# TODO issue pull request to https://github.com/ericniebler/meta and
# update here if it is accepted
archive_override(
    module_name = "ericniebler_meta",
    integrity = "sha256-KIf+Iv4VFewjAybyqR0XlDDLSUCLWEVXbcZeFLWmOaQ=",
    strip_prefix = "meta-1.0.0",
    urls = ["https://github.com/coding-heresy/meta/archive/refs/tags/1.0.0.tar.gz"],
)

########################################
# quickfix
########################################

bazel_dep(name = "quickfix")

archive_override(
    module_name = "quickfix",
    integrity = "sha256-HEMipocEUmyj0fIT57Dc0w4GeogVvip5sqsRl+9w3Pc=",
    strip_prefix = "quickfix-1.15.1",
    urls = ["https://github.com/quickfix/quickfix/archive/refs/tags/v1.15.1.tar.gz"],
    patches = [
        "//patches:quickfix.module.bazel.patch",
        "//patches:quickfix.add_build_file.patch",
    ],
    patch_strip = 0,
)

########################################
# strong type aliases from Doom
########################################

bazel_dep(
    name = "doom_strong_type",
    version = "1.1.0",
)

# TODO issue pull request to https://github.com/doom/strong_type and
# update here if it is accepted
archive_override(
    module_name = "doom_strong_type",
    integrity = "sha256-CyRxFGE9/t9PCBw2T7pddmOwy6z6QaYq+F6QH1rfAeo=",
    strip_prefix = "strong_type-1.1.0",
    urls = ["https://github.com/coding-heresy/strong_type/archive/refs/tags/1.1.0.tar.gz"],
)

########################################
# yaml library
########################################

bazel_dep(
    name = "yaml-cpp",
    version = "0.8.0",
)


########################################
# bazel_module_versions below here
########################################

bazel_dep(
    name = "bazel_module_versions",
    version = "0.0.0",
)

archive_override(
    module_name = "bazel_module_versions",
    integrity = "sha256-t0dFYSC417MvkHbDdhk8GePkp9r4nnVP0VnqGXSsHf8=",
    strip_prefix = "bazel_module_versions-0.0.0",
    urls = ["https://github.com/coding-heresy/bazel_module_versions/archive/refs/tags/0.0.0.tar.gz"],
)

module_versions = use_extension(
    "@bazel_module_versions//:extensions.bzl",
    "dependent_module_versions",
)

use_repo(module_versions, "module_versions")

# TODO(bd) restore this when rules_build_error works correctly

# ########################################
# # rules to enforce build failures
# ########################################

# bazel_dep(
#     name = "rules_build_error",
#     version = "0.8.4",
# )
